--- a/yaml_test_1.yaml
+++ b/yaml_test_1.yaml
@@ -1,6 +1,9 @@
 Environment: {time: day}
 Stakeholders: 
   Patient_1: [bedroom, 22, 5, 3]
-  robot: [bedroom]
+  robot: [corridoor]
   patient_2: [bedroom, 25, 5, 6]
   patient_3: [bedroom, 43, 8, 10]
+Suggested_actions:
+  - follow user
+  - wait
