--- a/blackboard/lying_dilemma_deontology_conf.yaml
+++ b/blackboard/lying_dilemma_deontology_conf.yaml
@@ -1,5 +1,5 @@
 tests:
-  Deontology: { module_name: deontology_test, class_name: ActDeontologyTest, number_of_outputs: 2, output_names: [is_breaking_rule, breaking_rule_ids]}
+  Deontology: { module_name: lying_deontology_test, class_name: ActDeontologyTest, number_of_outputs: 2, output_names: [is_breaking_rule, breaking_rule_ids]}
 test_order:
   - Deontology
-evaluator: {module_name: deontology_evaluator, class_name: DeontologyEvaluator}
+evaluator: {module_name: lying_deontology_evaluator, class_name: DeontologyEvaluator}
