--- a/blackboard/speeding_dilemma_conf.yaml
+++ b/blackboard/speeding_dilemma_conf.yaml
@@ -1,7 +1,7 @@
 data_loader: {module_name: yaml_loader, class_name: YAMLLoader}
 tests:
-  Deontological: {module_name: road_rule_test, class_name: RoadRuleTest, number_of_outputs: 2, output_names: [is_rule_boken, broken_rules]}
-  Utilitarian: {module_name: speeding_utilitarian_test, class_name: UtilitarianTest, number_of_outputs: 3, output_names: [social, stakeholder_safety, driver_autonomy]}
+  Deontological: {module_name: road_rule_test, class_name: RoadRuleTest, number_of_outputs: 2, output_names: [is_rule_broken, broken_rules]}
+  Utilitarian: {module_name: speeding_utilitarian_test, class_name: UtilitarianTest, number_of_outputs: 3, output_names: [social, stakeholder_wellbeing, driver_autonomy]}
 test_order:
   - Deontological
   - Utilitarian
