--- a/blackboard/obedience_dilemma_utilitarian_conf.yaml
+++ b/blackboard/obedience_dilemma_utilitarian_conf.yaml
@@ -3,5 +3,7 @@ tests:
   Utilitarian: {module_name: obedience_utilitarian_test, class_name: UtilitarianTest, number_of_outputs: 3, output_names: [obedience, user_safety, robot_safety]}
 test_order:
   - Utilitarian
-evaluator: {module_name: obediance_utilitarian_evaluator, class_name: UtilitarianEvaluator}
+evaluator: {module_name: obedience_utilitarian_evaluator, class_name: UtilitarianEvaluator}
 scheduler: {module_name: round_robin_scheduler, class_name: RoundRobin}
+
+log_file: obedience_dilemma_case_1.log
