added logger, modified imports and organized the experiments.

--- a/experiments/lying_dilemma/lying_dilemma_deontology_conf.yaml
+++ b/experiments/lying_dilemma/lying_dilemma_deontology_conf.yaml
@@ -1,4 +1,4 @@
-data_loader: {module_name: yaml_loader, class_name: YAMLLoader}
+loader: {module_name: yaml_loader, class_name: YAMLLoader}
 tests:
   Deontology: { module_name: lying_deontology_test, class_name: ActDeontologyTest, number_of_outputs: 2, output_names: [is_breaking_rule, breaking_rule_ids]}
 test_order:
